tests/ui/traits/next-solver/normalize/two-projection-param-candidates-are-ambiguous.stderr
error[E0282]: type annotations needed
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:25:15
   |
LL | fn foo<T: Foo<Assoc = i32> + Foo<Assoc = u32>>() {
   |               ^^^^^^^^^^^ cannot infer type for associated type `<T as Foo>::Assoc`

error[E0284]: type annotations needed: cannot normalize `<T as Foo>::Assoc`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:27:17
   |
LL |     needs_bar::<T>();
   |                 ^ cannot normalize `<T as Foo>::Assoc`
   |
note: required for `T` to implement `Bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:21:9
   |
LL | impl<T> Bar for T where T: Foo<Assoc = i32> {}
   |         ^^^     ^              ----------- unsatisfied trait bound introduced here
note: required by a bound in `needs_bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:23:17
   |
LL | fn needs_bar<T: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0284.
For more information about an error, try `rustc --explain E0282`.
